# govbrnews-scraper

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  MIGRATION_PLAN_PUBLISHED_AT.md  README.md  augment_news.py  consolidate_json_to_csv.py  news_scraper.py  pdf_generator.py  pyproject.toml  requirements.txt  rescrape_last_month.py  site_urls.yaml  test_datetime_scraping.py  test_new_fields.py
docker/: Dockerfile  README.md  init-db.py  init-db.sh  requirements.txt  run-postgres-server.sh
docker-postgres/: Dockerfile  README.md  init-db.sh  requirements.txt  run-postgres-server.sh
docker-typesense/: CLAUDE.md  Dockerfile  MCP-ANALYSIS.md  MCP-SERVER-STATUS.md  README.md  WEEKLY_INDEX_OPTIMIZATION.md  entrypoint.sh  init-typesense.py  requirements.txt  run-typesense-server.sh  test_init_typesense.py
scripts/: backfill_published_datetime.py  remove_published_at_old.py  rename_published_at_fields.py
src/: cogfy_manager.py  dataset_manager.py  enrichment_manager.py  group_news_by_agency.py  main.py  migrate_to_cogfy.py  news_grouper.py  storage_wrapper.py  test_cogfy_theme_fields.py  test_enrichment.py  test_theme_enrichment.py  theme_enrichment_manager.py  upload_to_cogfy_manager.py
tests/: conftest.py  test_article_classifier_summarizer.py  test_cases.yaml  test_classifier_summarizer.py  test_cogfy_manager.py  test_data.yaml  test_data_update_fix.py  test_datetime_extraction.py  test_news_ai_classifier.py  test_news_analyzer.py  test_news_grouper.py  test_theme_enrichment_manager.py  test_upload_to_cogfy_manager.py  test_webscraper.py
(+11291 files in other folders)
