[tool.poetry]
name = "govbr-news-ai"
version = "0.1.0"
description = ""
authors = ["Nitai Bezerra da Silva <nitaibezerra@protonmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
langchain = "^0.3.3"
markdown = "^3.7"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
reportlab = "^4.2.5"
requests = "^2.32.3"
langchain-community = "^0.3.2"
openai = "^1.52.0"
langchain-openai = "^0.2.3"
datasets = "^3.1.0"
retry = "^0.9.2"
markdownify = "^0.14.1"
algoliasearch = "^4.13.0"
scipy = "^1.16.2"
# Data platform for PostgreSQL storage (optional - only needed for dual_write mode)
data-platform = { path = "../data-platform", develop = true, optional = true }

[tool.poetry.extras]
postgres = ["data-platform"]

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
ipdb = "^0.13.13"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
matplotlib = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
